# -kernel-sumint

./: README.md
method1/: README.md  basics.cl  basics.cpp
method2/: CMakeLists.txt  README.md  basics.cl  basics.cpp
method3/: README.md  basics.cl  basics.cpp
method3/common/: clutils.cpp
